# synth_data_generation

./: .gitignore  README.md  custom_problems.jsonl  pyproject.toml  tasks.md
format_validation/: README.md  generate.py  test.py  types.py  verify.py
format_validation/HTML/: 1.html
format_validation/data/: problems.json  problems.jsonl
pii_extraction/: README.MD  generate.py  random_pii.py  test.py  types.py  verify.py
pii_extraction/data/: problems.json
reasoning/: README.md  generate.py  test.py  types.py  verify.py
reasoning/data/: problems.json
